--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-loading-indicators": "^1.0.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.0",
